[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edrft"
version = "0.1.1"
description = "RFT and edRFT models for significant wave-height time-series forecasting."
readme = "PYPI_README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Aryan Bhambu"},
]
keywords = ["edrft", "rft", "rvfl", "transformer", "wave-height", "forecasting"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.21",
    "torch>=2.0",
]

[project.optional-dependencies]
tuning = [
    "hyperopt>=0.2.7",
    "setuptools<81",
]
wave = [
    "hyperopt>=0.2.7",
    "pandas>=1.3",
    "setuptools<81",
]
dev = [
    "build",
    "hyperopt>=0.2.7",
    "pandas>=1.3",
    "pytest",
    "setuptools<81",
    "twine",
]

[project.urls]
Homepage = "https://github.com/statsdl/edRFT"
Issues = "https://github.com/statsdl/edRFT/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 99
target-version = ["py38"]

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
